--- a/_config.yml
+++ b/_config.yml
@@ -6,28 +6,28 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Start Bootstrap
-email: your-email@domain.com
+title: Jagtesh Chadha
+email: contact@jagteshchadha.com
 description: > # this means to ignore newlines until "baseurl:"
-  Web Developer - Graphic Artist - User Experience Designer
-baseurl: "/startbootstrap-freelancer-jekyll" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+  Front-End Developer - Back-End Developer - Product Manager
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "http://www.jagteshchadha.com" # the base hostname & protocol for your site
 
 # Social media profiles - feel free to add more here
-twitter_username: SBootstrap
-github_username:  BlackrockDigital
-facebook_username: StartBootstrap
+twitter_username: jagtesh
+github_username:  jagtesh
+facebook_username: jagtesh
 #instagram_username: beyonce
-#stackoverflow_url: https://
+stackoverflow_url: http://stackoverflow.com/users/129912/jagtesh-chadha
 #googleplus_username: BobMarley
 #skype_username: echo123
-#linkedin_url: https://
+linkedin_url: https://ca.linkedin.com/in/jagtesh
 
 # Address information
-address_street: 3034 Melrose Place
-address_city: Beverly Hills
-address_state: CA
-address_zip: 90201
+# address_street: 3034 Melrose Place
+# address_city: Beverly Hills
+# address_state: CA
+# address_zip: 90201
 
 # Build settings
 markdown: kramdown
